--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -22,4 +22,14 @@
         android:paddingLeft="10dp"
         android:paddingTop="8dp"
         android:id="@+id/item_nome"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Média"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:paddingLeft="10dp"
+        android:paddingTop="8dp"
+        android:id="@+id/item_media"/>
 </LinearLayout>
